separating our html code into smaller components

--- a/html/restaurantDetailsPage.html
+++ b/html/restaurantDetailsPage.html
@@ -16,7 +16,8 @@
         </div>
       </div>
     </nav>
-    {/* NAVBAR */} {/* HEADER */}
+    {/* NAVBAR */}
+    {/* HEADER */}
     <div className="h-96 overflow-hidden">
       <div
         className="bg-center bg-gradient-to-r from-[#0f1f47] to-[#5f6984] h-full flex justify-center items-center"
